# rays

./: Cargo.toml  README.md  bacon.toml  todo.txt
data/: test.json  test_scene.yaml
src/: camera.rs  color.rs  lib.rs  main.rs  math.rs  render.rs  scene.rs  shaping.rs
src/math/: color.rs  ray.rs  shaping.rs  vec3.rs
src/render/: mod.rs
src/scene/: object.rs  sky.rs
src/scene/object/: geometry.rs  material.rs  plane.rs  sphere.rs
src/scene/object/geometry/: plane.rs  sphere.rs
src/scene/object/material/: lambertian.rs  metal.rs  translucent.rs
