[package]
name = "rays"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
image = "0.24.6"
pixels = "0.13.0"
rand = "0.8.5"
serde = { version = "1.0", features = [ "derive" ] }
serde_yaml = "0.9.21"
typetag = "0.2.8"
winit = "0.28.6"

# TODO: use a git repo reference instead
# see https://doc.rust-lang.org/cargo/reference/specifying-dependencies.html
[dependencies.derive_builder]
path = "../../../tutorials/rust/rust-macro-workshop/builder"
